--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,10 +16,6 @@
     "noImplicitAny": false,
     "strictBindCallApply": false,
     "forceConsistentCasingInFileNames": false,
-    "noFallthroughCasesInSwitch": false,
-    "paths": {
-      "@auth/*": ["src/auth/*"],
-      "@prisma/*": ["src/prisma/*"]
-    }
+    "noFallthroughCasesInSwitch": false
   }
 }
